# pippkgpoc

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  vcpkg.json
.github/workflows/: package.yml
src/: main.cpp
